# stable

./: Cargo.toml  README.md
docs/: claude-code-status-detection-spec.md  tmux-mvp-plan.md  tmux-mvp-todo.md  tmux-plan.md
src/: agents.rs  app.rs  config.rs  global_config.rs  main.rs  models.rs  runner.rs  tmux.rs  tui.rs  ui.rs
src/agents/: claude.rs  opencode.rs
src/agents/claude/: claude_hook_server.rs
src/ui/: agent_view.rs  create_agent.rs  dashboard.rs  remove_agent.rs  theme.rs
